    * 0713 New bulk notifications...
    * 0108 FIX: Prevent service notification on host alerts...
    * 0058 FIX: Fix email notifications containing non-ASCII characters in some situtations...
    * 0133 FIX: Fixed mkeventd notification plugin...
    * 0720 FIX: Fix timeperiod computation with CMC and flexible notifications...

    BI:
    * 0721 Use hard states in BI aggregates...
    * 0669 FIX: Fixed regex matching in BI when using character groups [...]...

    Reporting & Availability:
    * 0018 New option for displaying a legend for the colors used in the timeline...
    * 0405 Add CSV export to availability views...
    * 0338 FIX: Introduce time limit on availability queries...
    * 0681 FIX: Display correct year for availability range for last month in january

    Event Console:
    * 0301 Handling messages of special syslog format correctly...
    * 0388 Moved Event Console related settings to own settings page...
    * 0710 Create a history entry for events that failed their target count...
    * 0303 FIX: Old log entries were shown in event history first...
    * 0304 FIX: Escaping several unwanted chars from incoming log messages...
    * 0089 FIX: CSV export of event console was broken...
    * 0359 FIX: Fixed exception in event simulator when one match group did not match
    * 0384 FIX: Trying to prevent problem when restarting mkeventd...
    * 0427 FIX: Fixed exception when handling connections from event unix socket...
    * 0679 FIX: Allow non-Ascii characters in generated events
    * 0680 FIX: Do not allow spaces in host names in event simulator...
    * 0672 FIX: Service item of "Check event state in event console" checks can now be configured...
    * 0590 FIX: mkeventd: fixed encoding of unicode characters in the snmptrap receiver...

    Livestatus:
    * 0337 New header for limiting the execution time of a query...
    * 0276 nagios4 livestatus support...
    * 0335 FIX: Parse state of downtime notification log entries correctly...