@@ -1,0 +1,10 @@
+Title: BI aggregations now also honor scheduled downtimes
+Level: 2
+Component: bi
+Version: 1.2.5i1
+Date: 1395072515
+Class: feature
+
+A BI aggregate now also aggregates the additional information wether it is
+in a scheduled downtime or not. Please refer to the updated <a href="checkmk_bi.html">documentation
+about BI</a> for details.
